# mimir-native

./: .gitignore  CODE_REVIEW.md  FINAL_SUMMARY.md  LOCOMO_OPTIMIZATION_REPORT.md  MIMIR_V2_PROGRESS_REPORT.md  OPTIMIZATION_ANALYSIS.md  OPTIMIZATION_REPORT.md  PROGRESS.md  README.md  debug_retrieval.py  diagnose_q1.py  diagnosis.py  locomotive_benchmark.py  locomotive_benchmark_final.py  push_to_github.sh  pyproject.toml  temporal_normalizer.py  test_2q.py  test_api_models.py  test_check_memories.py  test_enhancer_quick.py  test_evidence_retriever.py  test_hybrid_cached.py  test_hybrid_locomo.py  test_hybrid_weighted.py  test_llm_native.py  test_locomo_10q.py  test_locomo_10q_fast.py  test_locomo_full.py  test_locomo_llm_native.py  test_locomo_optimized.py  test_locomo_optimized_v2.py  test_locomo_parallel.py  test_locomo_paratera.py  test_locomo_simple.py  test_locomo_v2.py  test_locomo_v3.py  test_locomo_when_temporal.py  test_mimir_native_v2.py  test_parse_date.py  (+15 more)
docs/: INTEGRATION_GUIDE.md  PHASE3_EXECUTION.md  RESEARCH_SUMMARY.md  ROADMAP_CROSS_AI.md  ROADMAP_MIMIR_AGENT.md  ROADMAP_PHASE3.md  SKILL.md  SUPERMEMORY_SOTA_ANALYSIS.md  content_pipeline_arch.md
mimir-extension/: README.md  background.js  content.js  inject.js  popup.html  popup.js  test-extension.js  validate.js
mimir-extension/icons/: generate.html
src/mimir_native/: __init__.py  batch_processor.py  batch_processor_v2.py  content_processor.py  context_bridge.py  database.py  enhanced_retrieval.py  evaluator.py  ingestion_pipeline.py  llm_client.py  llm_native_memory.py  memory_agent.py  models.py  (+6 more)
(+31 files in other folders)
