[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mimir-native"
version = "0.1.0"
description = "SQLite-native Memory Layer with Temporal Knowledge Graph"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Arthur Han", email = "arthur@example.com" },
]
keywords = ["memory", "sqlite", "vector", "knowledge-graph", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "sqlite-vec>=0.1.0",
    "sentence-transformers>=2.2.0",
    "networkx>=3.0",
    "numpy>=1.24.0",
    "boto3>=1.28.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/TripleWhite/mimir-native"
Repository = "https://github.com/TripleWhite/mimir-native"
Issues = "https://github.com/TripleWhite/mimir-native/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mimir_native"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
